--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "npm run build:live",
-    "build": "tsc -p .",
-    "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc -p .",
+    "build:live": "npm run build && nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
     "lint": "eslint 'src/**/*.ts'",
     "test": "jest"
   },
@@ -21,11 +22,12 @@
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "rimraf": "^5.0.7",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "node-sql-parser": "^5.1.0"
+    "node-sql-parser": "^5.2.0"
   }
 }
