--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,10 +30,15 @@
     "module": "commonjs",                                /* Specify what module code is generated. */
     // changed!
     //"rootDir": "src",                                    /* Specify the root folder within your source files. */
-    "rootDir": "./src",
+    //"rootDir": "./src",
+    "rootDir": "./",
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
+    "baseUrl": "./",
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+    "paths": {
+      "@src/*": ["src/*"]
+    },
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
@@ -113,5 +118,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "test/**/*"]
 }
